Completely changes the method used to display a simple TextInput field in the dynamic bug_categories row; now using an extra CharField which is turned visible/invisible. Add free_text field to models.py, change migrations and admin.py accordingly. Added modified top/bottom margins in hjelp.css. Further disables all fields that are not visible and simplifies jQuery section of rebus.html. Modifies models.py so that children are deleted when the free text option is selected.

--- a/aleksis/apps/hjelp/static/css/hjelp.css
+++ b/aleksis/apps/hjelp/static/css/hjelp.css
@@ -65,4 +65,6 @@
 
 .bug-category-field {
     flex-grow: 1;
+    margin-top: 0;
+    margin-bottom: 0;
 }
